--- a/src/aura/PlannerCmp/PlannerCmp.css
+++ b/src/aura/PlannerCmp/PlannerCmp.css
@@ -30,6 +30,13 @@
     
 }
 
+.THIS .slds-hint-parent :not(.slds-tree__item){
+    /* padding-left: 2px !important; */
+    padding-right: 0px !important;
+    text-align: left !important;
+    /* display: -webkit-inline-box !important;;  */
+}
+
 .THIS .removeBorder {
 	box-shadow:none;
 }
